fix: Polygon drawing on mobile

--- a/src/FSD/features/dots-game/ui/DotsGame.module.css
+++ b/src/FSD/features/dots-game/ui/DotsGame.module.css
@@ -70,7 +70,7 @@
 
 .board {
   position: relative;
-  /* touch-action: none; */
+  touch-action: none;
   user-select: none;
 }
 
